--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center; */
- background-color: bg-secondary;
+ /* background-color: bg-ternary; */
+ background-color: #f0f1f3;
+ overflow: hidden;
 }
 
 .logo {
